[project]
name = "piphi-runtime-testkit-python"
version = "0.1.2"
description = "Pytest-first helpers for testing PiPhi runtime integrations"
authors = [
    {name = "KelvinSan", email = "support@piphi.network"},
]
keywords = ["piphi", "pytest", "testing", "runtime", "iot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Pytest",
    "Topic :: Software Development :: Testing",
]
dependencies = ["pytest>=8.3,<9.0"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/PiPhi-io/piphi-runtime-testkit-python#readme"
Repository = "https://github.com/PiPhi-io/piphi-runtime-testkit-python"
Issues = "https://github.com/PiPhi-io/piphi-runtime-testkit-python/issues"

[project.entry-points.pytest11]
piphi_runtime_testkit_python = "piphi_runtime_testkit_python.pytest_plugin"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[tool.pdm.scripts]
release-version = "python scripts/release.py"

[dependency-groups]
dev = [
    "fastapi>=0.115,<1.0",
    "httpx>=0.27,<1.0",
    "piphi-runtime-kit-python[fastapi]==0.4.5",
    "pytest>=8.3,<9.0",
    "pytest-asyncio>=0.24,<1.0",
    "twine>=6.2.0",
]
